@@ -4,7 +4,6 @@ import com.google.common.collect.ContiguousSet;
 import year2023.tools.Pair;
 
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,8 +17,12 @@ import static java.util.stream.Collectors.toList;
 @SuppressWarnings("unused")
 public class Day22 extends Day {
 
+    private List<Brick> bricks;
+    private Map<Integer, List<Brick>> bricksPerFirstZ;
+    private Map<Integer, List<Brick>> bricksPerLastZ;
+
     @Override
-    Integer part1(Stream<String> input) throws Exception {
+    void prepare(Stream<String> input) {
         Stream<String> sampleInput = """
                 1,0,1~1,2,1
                 0,0,2~2,0,2
@@ -30,7 +33,7 @@ public class Day22 extends Day {
                 1,1,8~1,1,9
                 """.lines();
 
-        List<Brick> bricks = input
+        List<Brick> originalBricks = input
                 .map(line -> line.split("~"))
                 .map(endPointsArray -> Pair.of(endPointsArray[0].split(","), endPointsArray[1].split(",")))
                 .map(pair -> new Brick(
@@ -39,10 +42,44 @@ public class Day22 extends Day {
                         ContiguousSet.closed(Integer.parseInt(pair.first()[2]), Integer.parseInt(pair.second()[2]))
                 ))
                 .sorted(comparing(brick -> brick.z().first()))
-                .collect(toList());
+                .toList();
 
+        bricks = settleAll(originalBricks).first();
+
+        bricksPerFirstZ = bricks.stream()
+                .collect(groupingBy(brick -> brick.z().first(), LinkedHashMap::new, toList()));
+
+        bricksPerLastZ = bricks.stream()
+                .collect(groupingBy(brick -> brick.z().last(), LinkedHashMap::new, toList()));
+    }
+
+    @Override
+    Long part1(Stream<String> input) throws Exception {
+        return bricks.stream()
+                .filter(brick -> getBricksSupportingThis(brick, bricksPerFirstZ, bricksPerLastZ).isEmpty())
+                .count(); // Your puzzle answer was 501
+    }
+
+    @Override
+    Integer part2(Stream<String> input) throws Exception {
+        return bricks.stream()
+                .filter(brick -> !getBricksSupportingThis(brick, bricksPerFirstZ, bricksPerLastZ).isEmpty())
+                .mapToInt(brick -> {
+                    List<Brick> b = new ArrayList<>(bricks);
+                    b.remove(brick);
+
+                    return settleAll(b).second();
+                })
+                .sum(); // Your puzzle answer was 80948
+    }
+
+    private static Pair<List<Brick>, Integer> settleAll(List<Brick> bricks) {
         Map<Integer, List<Brick>> bricksPerLastZ = bricks.stream()
                 .collect(groupingBy(brick -> brick.z().last(), LinkedHashMap::new, toList()));
+
+        bricks = new ArrayList<>(bricks);
+
+        int numberSettled = 0;
 
         for (int i = 0; i < bricks.size(); i++) {
             Brick brick = bricks.get(i);
@@ -57,6 +94,11 @@ public class Day22 extends Day {
                     if (candidate.intersects(Brick::x, brick) &&
                             candidate.intersects(Brick::y, brick)) {
 
+                        if (brick.z().first() == candidate.z().last() + 1) {
+                            settled = true;
+                            break outer;
+                        }
+
                         bricksPerLastZ.get(brick.z().last()).remove(brick);
 
                         Brick updatedBrick = brick.settleAbove(candidate);
@@ -66,6 +108,7 @@ public class Day22 extends Day {
                                 .add(updatedBrick);
 
                         settled = true;
+                        numberSettled++;
                         break outer;
                     }
                 }
@@ -79,55 +122,35 @@ public class Day22 extends Day {
 
                 bricksPerLastZ.computeIfAbsent(updatedBrick.z().last(), k -> new ArrayList<>())
                         .add(updatedBrick);
+
+                numberSettled++;
             }
         }
 
-        Map<Integer, List<Brick>> bricksPerFirstZ = bricks.stream()
-                .collect(groupingBy(brick -> brick.z().first(), LinkedHashMap::new, toList()));
+        return Pair.of(bricks, numberSettled);
+    }
 
-        int canBeDisintegrated = 0;
+    private static List<Brick> getBricksSupportingThis(Brick brick, Map<Integer, List<Brick>> bricksPerFirstZ, Map<Integer, List<Brick>> bricksPerLastZ) {
+        List<Brick> b = bricksPerFirstZ.getOrDefault(brick.z().last() + 1, List.of());
 
-        for (Brick brick : bricks) {
-            List<Brick> bricksThatThisSupport = new ArrayList<>(bricksPerFirstZ.getOrDefault(brick.z().last() + 1, List.of()));
+        return b.stream()
+                .filter(brickAbove -> brickAbove.intersects(Brick::x, brick) || brickAbove.intersects(Brick::y, brick))
+                .filter(brickAbove -> {
+                    int zToMatch = brickAbove.z().first() - 1;
+                    List<Brick> bricksOnRowBelow = bricksPerLastZ.get(zToMatch);
 
-            boolean holdsUpAtLeastOne = false;
+                    if (bricksOnRowBelow.isEmpty()) {
+                        return true;
+                    }
 
-            Iterator<Brick> iterator = bricksThatThisSupport.iterator();
-            while (iterator.hasNext()) {
-                Brick brickAbove = iterator.next();
-
-                if (!brickAbove.intersects(Brick::x, brick) &&
-                        !brickAbove.intersects(Brick::y, brick)) {
-
-                    iterator.remove();
-                    continue;
-                }
-
-                int zToMatch = brickAbove.z().first() - 1;
-                List<Brick> bricksOnRowBelow = bricksPerLastZ.get(zToMatch);
-
-                if (bricksOnRowBelow.isEmpty()) {
-                    continue;
-                }
-
-                boolean hasSupportingBrick = bricksOnRowBelow.stream()
-                        .filter(candidate -> candidate != brick)
-                        .anyMatch(candidate ->
-                                candidate.intersects(Brick::x, brickAbove) &&
-                                        candidate.intersects(Brick::y, brickAbove)
-                        );
-
-                if (hasSupportingBrick) {
-                    iterator.remove();
-                }
-            }
-
-            if (bricksThatThisSupport.isEmpty()) {
-                canBeDisintegrated++;
-            }
-        }
-
-        return canBeDisintegrated; // Your puzzle answer was 501
+                    return bricksOnRowBelow.stream()
+                            .filter(candidate -> candidate != brick)
+                            .noneMatch(candidate ->
+                                    candidate.intersects(Brick::x, brickAbove) &&
+                                            candidate.intersects(Brick::y, brickAbove)
+                            );
+                })
+                .toList();
     }
 
     private record Brick(ContiguousSet<Integer> x,
